[gd_scene load_steps=9 format=3 uid="uid://dyl8fvraxwivv"]

[ext_resource type="PackedScene" uid="uid://b1vehxtueux4l" path="res://src/UI/Options/Settings.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://dqramyf8aeeyv" path="res://src/UI/Options/KeyConfig.tscn" id="2"]
[ext_resource type="Theme" uid="uid://blqarblxvhp8o" path="res://src/UI/Theme/LaputaThemeMenus.tres" id="3"]
[ext_resource type="PackedScene" uid="uid://bdt0hp441qxe3" path="res://src/UI/Options/ControllerConfig.tscn" id="4"]
[ext_resource type="Script" uid="uid://0ac4soyfj6f0" path="res://src/UI/Options/Options.gd" id="5"]
[ext_resource type="Texture2D" uid="uid://87tihquqgyim" path="res://assets/UI/ArrowRight.png" id="6"]
[ext_resource type="Texture2D" uid="uid://b2gn2gqrhri0q" path="res://assets/UI/ArrowLeft.png" id="7"]
[ext_resource type="PackedScene" path="res://src/UI/MenuButton.tscn" id="8"]

[node name="Options" type="MarginContainer"]
clip_contents = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 42.0
offset_bottom = 32.0
theme = ExtResource("3")
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 8
script = ExtResource("5")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Control" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 14.324)
layout_mode = 2
mouse_filter = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="TabContainer" type="TabContainer" parent="VBoxContainer2"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
tab_alignment = 1

[node name="Settings" parent="VBoxContainer2/TabContainer" instance=ExtResource("1")]
layout_mode = 2

[node name="KeyConfig" parent="VBoxContainer2/TabContainer" instance=ExtResource("2")]
visible = false
layout_mode = 2

[node name="ControllerConfig" parent="VBoxContainer2/TabContainer" instance=ExtResource("4")]
visible = false
layout_mode = 2

[node name="Return" parent="VBoxContainer2" instance=ExtResource("8")]
layout_mode = 2
size_flags_horizontal = 12
text = "Return"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(288, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2
texture = ExtResource("7")
stretch_mode = 2

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("6")

[connection signal="tab_changed" from="VBoxContainer2/TabContainer" to="." method="_on_TabContainer_tab_changed"]
[connection signal="pressed" from="VBoxContainer2/Return" to="." method="_on_Return_pressed"]
